[package]
name = "retris"
version = "0.1.0"
authors = ["DawnMagnet <axccjqh@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[build-dependencies]
[target."cfg(unix)".dependencies.termios]
version = "0.2"
[target."cfg(windows)".dependencies.libc]
version = "0.2"